# mega-random-name

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
mega_random_name/: __init__.py  core.py
tests/: test_mega_random_name.py
